Add initial theme layouts and styles.
- Use TailwindCSS to provide styles for default layout pages.
- Use Lunr JS to provide full-text search for the site.

This theme is simple and text-focused. It is designed with minimal
usage of color and styles.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
         {{- block "main" . }}{{- end }}
     </main>
     {{- partial "footer.html" . -}}
+    {{- block "footerfiles" . }}{{- end }}
 </body>
 
 </html>
