--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+{{ `<!-- _default/list.html -->` | safeHTML }}
 {{- /* Hugo by default only shows pages underneath the current bundle. This
 snippet gathers all pages of the current bundle and all nested bundles. */ -}}
 
