--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
   </div>
   <hr class="my-4">
   <div class="mt-8 overflow-hidden">
-    <article class="prose max-w-none">{{ .Content }}</article>
+    <article class="prose mx-auto">{{ .Content }}</article>
   </div>
 </div>
 {{ end }}
