--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,9 +10,14 @@
 <!-- Hugo Version Number -->
 {{ hugo.Generator -}}
 
-{{- with ($.Param "favicon") }}
-<link rel='icon' type='image/png' href="{{ . | absURL }}" />
-{{- end -}}
+<!-- Icons -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0080d8">
+<meta name="msapplication-TileColor" content="#603cba">
+<meta name="theme-color" content="#f1f2f3">
 
 <!-- Site Styles -->
 {{ $styles := resources.Get "css/tw.css" }}
