--- a/layouts/partials/post/summary.html
+++ b/layouts/partials/post/summary.html
@@ -1,4 +1,6 @@
+{{ if site.IsServer }}
 {{ `<!-- partials/post/summary.html -->` | safeHTML }}
+{{ end }}
 <article>
   <div class="flex justify-between">
     <h2 class="text-noonblue font-bold">
